Programming Languages/Hw2/part4/t45.output
running e2c
compiling the C generated code
t45.c: In function ‘main’:
t45.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t45.c:5:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t45.c:6:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a);
                ^
t45.c:6:16: note: each undeclared identifier is reported only once for each function it appears in
t45.c:9:2: error: expected expression before ‘=’ token
  = ;
  ^
t45.c:10:20: error: expected expression before ‘)’ token
 printf("%d\n", a + );
                    ^
t45.c:11:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t45.c:15:2: error: expected expression before ‘=’ token
  = ;
  ^
t45.c:16:5: error: expected expression before ‘;’ token
 2 = ;
     ^
t45.c:18:2: error: expected expression before ‘=’ token
  = ;
  ^
t45.c:19:8: error: expected expression before ‘;’ token
 0 =  + ;
        ^
t45.c:20:9: error: expected expression before ‘;’ token
 1 = 1 + ;
         ^
t45.c:21:9: error: expected expression before ‘;’ token
 2 = 2 + ;
         ^
t45.c:23:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t45.c:29:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
t45.c:34:17: error: expected expression before ‘)’ token
 printf("%d\n", ~);
                 ^
